# TinyWeb

./: CMakeLists.txt  README.md
src/: main.cc
src/log/: log.cc  log.h
src/websvr/: websvr.cc  websvr.h
